kubeapps/ingress-route-helm.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kubeapps-helm-dashboard-route
  namespace: kubeapps
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - web
  routes:
  # 这里设置你的域名
    - match: Host(`kubeapps.k3s.com`)
      kind: Rule
      services:
        - name: kubeapps-internal-dashboard
          port: 8080
